# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff.py  cli.py  gen_diff.py  gendiff.py  get_format.py  parse_data.py  parser.py
gendiff/formatter/: __init__.py  get_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/input/: flat1.yaml  flat2.yml
tests/fixtures/output/: json_format_json.txt  json_format_nested.txt
